--- a/deployment/server/gva-server-deployment.yaml
+++ b/deployment/server/gva-server-deployment.yaml
@@ -3,8 +3,8 @@ kind: Deployment
 metadata:
   name: gva-server
   annotations:
-    flipped-aurora/gin-vue-admin: backend
-    github: "https://github.com/flipped-aurora/gin-vue-admin.git"
+    moon-wind/gin-vue-admin: backend
+    github: "https://github.com/moon-wind/gin-vue-admin.git"
     app.kubernetes.io/version: 0.0.1
   labels:
     app: gva-server
@@ -29,7 +29,7 @@ spec:
             - containerPort: 8888
               name: http
           volumeMounts:
-            - mountPath: /go/src/github.com/flipped-aurora/gin-vue-admin/server/config.yaml
+            - mountPath: /go/src/github.com/moon-wind/gin-vue-admin/server/config.yaml
               name: config
               subPath: config.yaml
             - mountPath: /etc/localtime
