--- a/deployment/web/gva-web-deploymemt.yaml
+++ b/deployment/web/gva-web-deploymemt.yaml
@@ -3,8 +3,8 @@ kind: Deployment
 metadata:
   name: gva-web
   annotations:
-    flipped-aurora/gin-vue-admin: ui
-    github: "https://github.com/flipped-aurora/gin-vue-admin.git"
+    moon-wind/gin-vue-admin: ui
+    github: "https://github.com/moon-wind/gin-vue-admin.git"
     app.kubernetes.io/version: 0.0.1
   labels:
     app: gva-web
