--- a/deployment/other/mysql-deployment.yaml
+++ b/deployment/other/mysql-deployment.yaml
@@ -7,7 +7,8 @@ spec:
   - port: 3306
   selector:
     app: mysql
-  clusterIP: None
+  # clusterIP: None
+  type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
